--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -18,6 +18,7 @@
         {% endblock %}
     </head>
     <body>
+        {# nav bar bootstrap#}
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <a class="navbar-brand" href="{{path("home")}}">Mamieton</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -26,12 +27,19 @@
 
             <div class="collapse navbar-collapse justify-content-around" id="navbarSupportedContent">
                 <ul class="navbar-nav mr-auto">
-                    <li class="nav-item active">
+                    <li class="nav-item active"> {# affichage des liens que qd je suis connecté uniquement#}
                         <a class="nav-link" href="{{ path('recette_index')}}">Recettes</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="{{ path('ingredient_index')}}">Ingrédients</a>
                     </li>
+                    <li>
+                        {% if is_granted('ROLE_ADMIN') %}
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{{ path('user_index')}}">Utilisateurs</a>
+                    </li>
+                    {% endif %}
                     {% if not app.user %}
                     <li class="nav-item">
                         <a class="nav-link" href="{{ path('app_login')}}">Connexion</a>
